--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/redux-saga": "^0.10.5",
     "antd": "^4.19.3",
+    "axios": "^0.26.1",
+    "connected-react-router": "^6.9.2",
     "craco": "^0.0.3",
     "dotenv": "^16.0.0",
     "firebase": "^9.6.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
