--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@firebase/app-types": "^0.7.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/react-redux": "^7.1.23",
     "@types/redux-saga": "^0.10.5",
     "antd": "^4.19.3",
     "axios": "^0.26.1",
@@ -25,6 +27,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
